# battleship

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  HISTORY.md  IMPLEMENTATIONS.md  INSTALL.md  INSTALLATION.md
include/: GameCore.h
include/field/: BattleField.h
include/modes/: AdvancedField.h  IntermediateField.h  TutorialField.h
include/utils/: GameUtils.h
src/utils/: GameUtility.cpp
